# nethsm

./: .gitattributes  .gitignore  .gitlab-ci-setup.bash  .gitlab-ci.yml  .gitmodules  .opam-repository-commit  CHANGES.md  CONTRIBUTORS.md  Makefile  Makefile.sub  Makehelp  README.md  SUPPORTERS.md  gitconfig.ad
container/: Dockerfile  start.sh
container/alpine/: Dockerfile  start.sh
container/static/: Index.js  Index.js.map
coreboot/: README.md
coreboot/qemu/: coreboot.rom  coreboot_defconfig  grub.cfg
docs/: .gitignore  DataModel.drawio  EncryptionArchitecture.drawio  Makefile  MuenSubjects.drawio  README.md  clustering.md  config.ini  developer-documentation.md  etcd_witness.conf.template  nethsm-api.json  nethsm-api.raml  nethsm-api.yaml  nitrohsm-api.raml  operator-manual.md  parse.py  prodrive-hermes-setup.md  states.dia  system-design.md  verified-boot.drawio
keys/smartcard/: key.pub
keys/smartcard/private/: pubring.kbx
keys/test-key/: .gitignore  key.pub
keys/test-key/private/: pubring.kbx
keys/test-key/private/private-keys-v1.d/: 022754CFD07597661980CF756C0B1E95B536AEE1.key
ocaml-libcrux-cryptops/: Cargo.toml
ocaml-libcrux-cryptops/src/: lib.rs
src/container/alpine/: Dockerfile  Dockerfile.dockerignore  Makefile  compose-cluster.yaml  compose-multi.yaml  compose-unikernel.yaml  compose-unix.yaml  provision.sh  start-debug.sh  start-production.sh  start-test.sh  start.sh  tlsproxy.go
src/container/builder/: Dockerfile  muen-1.1.1.patch  sbs-smartcard.patch  z790.patch
src/container/builder/gmp-freestanding/: gmp-freestanding.opam  gmp-freestanding.pc  libgmp-fat.patch
src/container/debian/: Dockerfile  start.sh
src/container/static/: index.html
src/coreboot/: README.md  config.nethsm_prodrive_hermes_1.0  config.nethsm_qemu_q35  config.nethsm_supermicro_x11_ssh_tf  dummy_oem_key.pem  grub.cfg
src/coreboot/blobs/: POC6001198032R12-RP06.00-uefi-csme-no_me-btg_p5.swu  hermes_bios_base.swu
src/installer/: .gitignore  Makefile  README.md  grub-ci-installer.cfg  uinit.go
src/installer/auto/: config
src/installer/config/: build
src/installer/config/package-lists/: flashrom.list.chroot  installer.list.chroot  mugenhwcfg.list.chroot
src/installer/initramfs/: uinit
src/installer/root/boot/: vmlinuz
src/keyfender/: .ocamlformat  access.ml  backend.ml  cached_store.ml  cached_store.mli  config.ml  config_store.ml  crypto.ml  crypto.mli  domain_key_store.ml  dune  dune-project  encrypted_store.ml  encrypted_store.mli  endpoint.ml  handler_cluster.ml  handler_config.ml  handler_health.ml  handler_info.ml  handler_keys.ml  handler_metrics.ml  handler_namespaces.ml  handler_provision.ml  handler_random.ml  handler_system.ml  handler_unlock.ml  handler_users.ml  hsm.ml  hsm.mli  hsm_clock.ml  hsm_clock.mli  json.ml  json_store.ml  json_store.mli  keyfender.opam  keyfender.opam.locked  kv_config.ml  kv_crypto.ml  kv_crypto.mli  kv_domain_key.ml  (+13 more)
src/keyfender/test/: changes  dune  key.pem  keys_generate.json  keys_generate1.json  load_test.sh  notes.sh  operator_user.json  provision.json  public.pem  test_cached_store.ml  test_crypto.ml  test_dispatch.ml  test_dispatch_helpers.ml  test_dispatch_helpers.mli  test_export_backup.ml  test_export_backup.mli  test_logs.ml  test_logs.t  test_server.ml  test_stream.ml  test_utils.ml
src/muen/: gmp-kabylake.patch  muennet-tailroom.patch
src/muen/linux/: config-4.18-supermicro-x11ssh-tf  config-5.4-prodrive-hermes-1.0  config-5.4-qemu-kvm  config-5.4-supermicro-x11ssh-tf  config-6.1-msi-z790-1  config-6.1-prodrive-hermes-1  config-6.1-prodrive-hermes-1.0  config-6.1-qemu-kvm
src/muen/policy/: nitrohsm_basic_system.xml
src/muen/policy/hardware/: common_hardware.xml  nethsm-msi-z790-1.0.xml  nethsm-msi-z790-1.xml  nethsm-prodrive-hermes-1.0.xml  nethsm-qemu-kvm.xml  nethsm-supermicro-x11ssh-tf.xml  nitrohsm-qemu-kvm.xml  (+1 more)
src/s_keyfender/: .gitignore  .ocamlformat  .ocamlformat-ignore  _tags  args.ml  arp.ml  config.ml  etcd_store.ml  gluten_mirage.mli  ipv6_custom.ml  mirage-unikernel-keyfender-unix.opam.locked  reconfigurable_stack.ml  relay_stack.ml  store.ml  unikernel-preinstall.opam.locked  unikernel.ml
src/s_keyfender/etcd/: gen.sh  gluten_mirage.ml  gluten_mirage.mli  h2_mirage.ml  stubs.ml
src/s_keyfender/etcd_client/: dune  gen.sh
src/s_keyfender/htdocs/: index.html
src/s_keyfender/test/: curl.sh  provision.json
src/s_keyfender/tls/: server.key
src/tests/: .ocamlformat  README.md  backup_restore.sh  cert.make  cluster_ca.sh  clustering_test.sh  commit-update.sh  common_functions.sh  container-cluster-tests.sh  container_cluster_test.sh  dune  generate_api_tests.ml  generate_raml_tests.ml  gnuplot.sh  hw_cluster_test.sh  hw_tests.sh  key.json  load_test.sh  metrics_gnuplot.sh  performance.sh  perftest.go  provision_test.sh  run_generated_tests.ml  run_generated_tests.sh  setup_cluster_ca.sh  shutdown.sh  shutdown_from_any_state.sh  shutdown_test.sh  unlock.sh  update.sh  utop_session.txt
src/tests/load/Restore_100k/: cmd.sh  headers.expected
src/tests/load/Write_during_restore_100k/: body.expected  cmd.sh  headers.expected  setup.sh  shutdown.sh
src/u-root/: go.mod  go.sum
src/u-root/hw/: common.go  const_hermes.go  const_qemu.go  const_testing.go  const_z790.go
src/u-root/installer/: uinit.go
src/u-root/script/: script.go
src/u-root/uinit/: .gitignore  Makefile  firmwareversion.go  go.mod  go.sum  gpt.go  local_conf.go  main.go  mock.go  muen.go  observable.go  s_net_external.go  s_platform.go  tpm.go  trng.go  util.go
tools/: create-changes.sh  deploy-on-hw-z790.sh  deploy-on-hw.sh  fetch-git-submodules.sh  flash_bios.sh  get-artifacts-dir.sh  gpg-new-signing-key.sh  gpg-sign-detached.sh  grub-mkqemu.sh  grub-qemu.cfg  in-muen-dev-env.bash  init-git-submodules.sh  mk-ci-installer.sh  mk-prod-release.sh  muen-mkdiskimage.sh  muen-mksysimage.sh  mulog-subject.py  nethsm-install.sh  nitrohsm-install.sh  openapi-fuzzing.sh  reset-data-partition.sh  setup-net-dev.sh  test-on-hw.sh
tools/api/: convert_validate.js
tools/docker/: Dockerfile.nethsm-builder
(+82 files in other folders)
