(* -*- tuareg -*- *)

let bisect = try Sys.getenv "BISECT_ENABLE" = "yes" with _ -> false

let () =
  Jbuild_plugin.V1.send @@ Printf.sprintf {|
(library
  (name        keyfender)
  (public_name keyfender)
  (preprocessor_deps update.pem buildTag softwareVersion)
  (preprocess (pps ppx_blob ppx_deriving_yojson ppx_deriving.std %s))
  (libraries astring logs lwt ptime cohttp rresult mirage-crypto mirage-crypto-pk webmachine cohttp-lwt yojson mirage-clock mirage-random scrypt-kdf mirage-kv tls x509 hex gmap ipaddr metrics metrics-lwt mirage-time duration))
  |}
 (if bisect then "bisect_ppx --conditional" else "")
