(library
 (name keyfender)
 (public_name keyfender)
 (preprocessor_deps buildTag softwareVersion)
 (preprocess
  (pps ppx_blob ppx_deriving_yojson ppx_deriving.std))
 (instrumentation
  (backend bisect_ppx --bisect-sigterm))
 (libraries
  astring
  logs
  lwt
  ptime
  cohttp
  rresult
  mirage-crypto
  mirage-crypto-pk
  webmachine
  cohttp-lwt
  cohttp-mirage
  yojson
  kdf.scrypt
  mirage-kv
  tls
  x509
  hex
  gmap
  ipaddr
  metrics
  metrics-lwt
  duration
  lru
  multipart_form
  multipart_form-lwt))
