opam-version: "2.0"
maintainer: [
  "Nitrokey GmbH"
]
authors: [
  "See CONTRIBUTORS.md"
]
homepage: "dummy"
bug-reports: "dummy"
license: "EUPL-1.2"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "--instrument-with=bisect_ppx" {coverage}]
  ["dune" "runtest" "-p" name "-j" jobs "--instrument-with=bisect_ppx" {coverage}] {with-test}
]
dev-repo: "git+https://example.com/nonexistent"
depends: [
  "cmdliner" {>= "1.2.0"}
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "alcotest" #{with-test}
  "bos" #{with-test}
  "spawn" #{with-test}
  "astring"
  "logs"
  "lwt"
  "ptime"
  "cohttp" {>= "5.0.0"}
  "rresult"
  "mirage-crypto" {>= "0.8.4"}
  "webmachine" {>= "0.7.0"}
  "cohttp-lwt" {>= "5.0.0"}
  "yojson"
  "ppx_deriving_yojson"
  "ppx_deriving"
  "ppx_blob"
  "kdf" {>= "1.0.0"}
  "mirage-kv" {>= "3.0.0"}
  "tls" {>= "0.13.1"}
  "x509" {>= "0.13.0"}
  "mirage-crypto-ec"
  "base64" {>= "3.0.0"}
  "hex"
  "gmap" {>= "0.3.0"}
  "ipaddr" {>= "5.0.0"}
  "metrics" {>= "0.2.0"}
  "metrics-lwt" {>= "0.2.0"}
  "duration"
  "multipart_form"
  "multipart_form-lwt"
  "io-page" {>= "2.4.0"} #{with-test}
  "conduit-mirage" {>= "5.0.0"} #{with-test}
  "cohttp-mirage" {>= "5.0.0"} #{with-test}
  "tcpip" {>= "7.0.0"} #{with-test}
  "mirage-kv-mem" #{with-test}
#  "mirage-random-test" #{with-test}
]
synopsis: "Keyfender library"
pin-depends: [
# These versions of CoHTTP/Conduit integrate a partially worked patch to
# transfer to the callback the identity of the client (the `inet_addr`) for
# MirageOS only. We did change cohttp-lwt-unix or cohttp-async for instance.
# These patches will probably not (according to the Conduit's design) be
# integrated upstream.
  ["conduit.dev" "git+https://github.com/nitrokey/nethsm-ocaml-conduit.git#aa245af5bb039ed216366e97d25acc02f12e1d4c"]
  ["conduit-lwt.dev" "git+https://github.com/nitrokey/nethsm-ocaml-conduit.git#aa245af5bb039ed216366e97d25acc02f12e1d4c"]
  ["conduit-mirage.dev" "git+https://github.com/nitrokey/nethsm-ocaml-conduit.git#aa245af5bb039ed216366e97d25acc02f12e1d4c"]
  ["cohttp.dev" "git+https://github.com/nitrokey/nethsm-ocaml-cohttp.git#e1efa0c23f7c22e83e7c24895ffbb490c76a1f24"]
  ["cohttp-lwt.dev" "git+https://github.com/nitrokey/nethsm-ocaml-cohttp.git#e1efa0c23f7c22e83e7c24895ffbb490c76a1f24"]
  ["cohttp-mirage.dev" "git+https://github.com/nitrokey/nethsm-ocaml-cohttp.git#e1efa0c23f7c22e83e7c24895ffbb490c76a1f24"]
  ["http.dev" "git+https://github.com/nitrokey/nethsm-ocaml-cohttp.git#e1efa0c23f7c22e83e7c24895ffbb490c76a1f24"]
  ["gmp.dev" "git+https://github.com/Nitrokey/nethsm-ocaml-gmp.git#57bed33b309832b4db321692768ebf4a720f4678"]
]
