(library
  (name generate_raml_tests_lib)
  (modules )
  (libraries base64 ezjsonm yaml containers cohttp))

(executable
  (name generate_raml_tests)
  (modules generate_raml_tests)
  (libraries generate_raml_tests_lib))

(executable
  (name run_generated_tests)
  (modules run_generated_tests)
  (libraries alcotest bos spawn))
