(tests
 (libraries
  logs.fmt
  fmt.tty
  mirage-crypto-rng.unix
  lwt.unix
  mirage-kv-mem
  mirage-ptime.mock
  keyfender
  alcotest
  str)
 (modules test_dispatch test_export_backup test_dispatch_helpers test_utils)
 (preprocessor_deps public.pem)
 (preprocess
  (pps ppx_blob))
 (deps
  update.bin
  ../bin/sign_update.exe
  key.pem
  changes
  version
  my_backup.bin
  ../bin/export_backup.exe)
 (names test_dispatch test_export_backup)
 (package keyfender))

(test
 (libraries logs.fmt fmt.tty keyfender alcotest mirage-crypto-rng.unix)
 (modules test_crypto)
 (name test_crypto)
 (package keyfender))

(executable
 (libraries
  logs.fmt
  fmt.tty
  keyfender
  mirage-kv-mem
  lwt.unix
  mirage-crypto-rng.unix)
 (modules test_stream)
 (preprocessor_deps public.pem)
 (preprocess
  (pps ppx_blob))
 (name test_stream)
 (public_name test_stream)
 (package keyfender))

(executable
 (libraries
  logs.fmt
  fmt.tty
  mirage-crypto-rng.unix
  keyfender
  tcpip.stack-socket
  conduit-mirage
  cohttp-mirage
  mirage-kv-mem)
 (modules test_server)
 (preprocessor_deps public.pem)
 (preprocess
  (pps ppx_blob))
 (name test_server)
 (public_name test_server)
 (package keyfender))

(executable
 (libraries logs.fmt keyfender)
 (modules test_logs)
 (name test_logs))

(cram
 (deps ./test_logs.exe))

(test
 (libraries logs.fmt fmt.tty lwt.unix alcotest keyfender mirage-kv-mem)
 (modules test_cached_store)
 (name test_cached_store)
 (package keyfender))
